--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~leaflet/dist/leaflet.css'
 @import '~@chakray/hero/theme/vars'
 @import '~@chakray/hero/theme/base'
