feat(maps): add gmaps vendor

--- a/src/app/demo/gmaps.tag.html
+++ b/src/app/demo/gmaps.tag.html
@@ -1,5 +1,5 @@
 Demo
-<cm-maps vendor='Leaflet' [origin]='[24.4675334,121.0967624,10.78]'></cm-maps>
+<cm-maps vendor='Gmaps' [origin]='[24.4675334,121.0967624,10.78]'></cm-maps>
 
 link with your maptile key:
 <a href='/leaflet?mapKey=abc'> Sample URL </a>
